@startuml e-commerce

skinparam nodesep 70
skinparam ranksep 70
skinparam linetype ortho

' =====================
' ENUMS
' =====================

enum GeneroQuadrinho {
  ACAO
  AVENTURA
  FICCAO_CIENTIFICA
  FANTASIA
  TERROR
}

enum TipoCapa {
  BROCHURA
  CAPA_DURA
  ESPECIAL
  LUXO
}

enum StatusPedido {
    PAGAMENTO_PENDENTE
    PAGO
    ENVIADO
    ENTREGUE
    CANCELADO
}

enum Perfil {
    ADMIN
    USUARIO
}

' =====================
' CLASSES
' =====================

abstract class BaseEntity << geral >>{
    - id: Long
    - dataCadastro: LocalDateTime
    - preencherDataCadastro(): void
}

abstract class Produto {
  - descricao: String
  - preco: BigDecimal
  - nome: String
  - estoque: Integer
}



class Usuario {
    - keycloakId: String
    - nome: String
    - email:    String
    - cpf:  String
    - telefone:  String
    - isAtivo:  Boolean
}

'class WishList {
'
'}

class Pedido {
    - tokenSessao: String
    - dataPedido: LocalDateTime
    - valorTotal: BigDecimal
}

class ItemPedido {
    - quantidade: Integer
    - precoUnitário: BigDecimal
}

class Endereco {
    - cep: String
    - logradouro: String
    - numero: String
    - complemento: String
    - bairro: String
    - cidade: String
    - estado: String
    - isPrincipal: Boolean
}

class Edicao {
  - numero: int
  - dataPublicacao: LocalDateTime
  - isbn: String
  - tipoCapa: TipoCapa
  - tiragem: int
  - dimensoes: String
}

class Quadrinho {
  - titulo: String
  - sinopse: String
  - genero: GeneroQuadrinho
}

class Colecao {
  - nome: String
  - descricao: String
  - dataInicioPublicacao: LocalDateTime
  - dataFimPublicacao: LocalDateTime
'  Esse cara aqui pode ser calculado, se dataFimPublicação == null
  - isCompleta: Boolean
}

class Editora {
  - nome: String
  - cnpj: String
}

class Pessoa {
  - nome: String
  - nacionalidade: String
  - dataNascimento: Date
}

class Credito {
  - papel: String
}

' =====================
' RELACIONAMENTOS
' =====================

Produto <|-- Edicao

Quadrinho "1" -down- "1..*" Edicao
Quadrinho "1" *-- "1..*" Credito
Pessoa "1" -- "0..*" Credito

Editora "1" -right- "0..*" Colecao

Colecao "1" o-right- "0..*" Edicao

Pedido "1" --* "1..*" ItemPedido

Pedido "1..*" --* "1" StatusPedido
Pedido "1" *-right- "1" Usuario

Usuario "1" -- "0..*" Endereco
Usuario "1" -- "1..*" Perfil

Edicao -- TipoCapa
Quadrinho -- GeneroQuadrinho

ItemPedido -- Produto

' WishList -- Usuario
' WishList -- Produto

' ======================
'         NOTAS
' ======================

note "Todas as classes do model herdam\ndessa aqui" as N1
note "Edição não herda dessa classe\n(Ela já herda produto)" as N2

N1 .. BaseEntity
N2 .. BaseEntity


@enduml